dovecot/dovecot-pigeonhole/tests/extensions/include/errors/included/circular-two-2.sieve
require "include";

include "circular-two.sieve";
